@@ -1,3 +1,8 @@
+2021-02-21  Allen D. Ball  <ball@hcf.dev>
+
+	* src/main/java/galyleo/shell/Shell.java:
+	Propagate kernel VM "-D" arguments to the JShell VM options.
+
 2021-02-20  Allen D. Ball  <ball@hcf.dev>
 
 	* src/main/java/galyleo/shell/Shell.java:
